<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_calculator_symbols"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="Hello World!"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_calculator_symbols">

        <Button
            android:id="@+id/button_c"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="C"
            android:textSize="@dimen/char_size" />

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text=" "
            android:textSize="@dimen/char_size" />

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text=" "
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_div"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="/"
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="7"
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="8"
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="9"
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_mul"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="*"
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="4"
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="5"
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="6"
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_sub"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="-"
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="1"
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="2"
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="3"
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="+"
            android:textSize="@dimen/char_size" />

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text=" "
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="0"
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_decimal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="."
            android:textSize="@dimen/char_size" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="0.2"
            android:layout_columnWeight="0.25"
            android:text="="
            android:textSize="@dimen/char_size" />


    </GridLayout>

</android.support.constraint.ConstraintLayout>